--- a/package.json
+++ b/package.json
@@ -3,9 +3,22 @@
     "version": "0.1.0",
     "description": "Collection of hashing functions for any data",
     "main": "index.js",
+    "keywords": [
+        "bitwise",
+        "hash",
+        "shorthash"
+    ],
     "scripts": {
         "test": "mocha"
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ghaiklor/data-2-hash.git"
+    },
     "author": "ghaiklor",
-    "license": "MIT"
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/ghaiklor/data-2-hash/issues"
+    },
+    "homepage": "https://github.com/ghaiklor/data-2-hash"
 }
