--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "bugs": {
         "url": "https://github.com/ghaiklor/data-2-hash/issues"
     },
-    "homepage": "https://github.com/ghaiklor/data-2-hash"
+    "homepage": "https://github.com/ghaiklor/data-2-hash",
+    "devDependencies": {
+        "mocha": "^2.1.0"
+    }
 }
