--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "crypto",
         "cli",
         "wrapper",
-        "hash"
+        "hash",
+        "file"
     ],
     "bin": {
         "d2h": "./bin/d2h.js"
